force-app/main/default/objects/MSL_Consumption__c/MSL_Consumption__c.object-meta.xml
<CustomObject>
    <label>MSL Consumption</label>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>MSL Consumption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSL Consumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>