force-app/main/default/objects/MSL_Consumption__c/fields/Average_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Average_Quantity__c</fullName>
    <label>Average Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>