force-app/main/default/objects/MSL_Consumption__c/fields/MSL_Batch__c.field-meta.xml
<CustomField>
    <fullName>MSL_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSL Batch</label>
    <referenceTo>MSL__c</referenceTo>
    <relationshipLabel>MSL Consumptions</relationshipLabel>
    <relationshipName>MSL_Consumptions</relationshipName>
    <type>Lookup</type>
</CustomField>