force-app/main/default/objects/MSL_Consumption__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>MSL Consumptions</relationshipLabel>
    <relationshipName>MSL_Consumptions</relationshipName>
    <type>Lookup</type>
</CustomField>