force-app/main/default/objects/MSL_Consumption__c/fields/X1st_Month__c.field-meta.xml
<CustomField>
    <fullName>X1st_Month__c</fullName>
    <label>1st Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>