force-app/main/default/objects/MSL_Consumption__c/fields/X2nd_Month__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Month__c</fullName>
    <label>2nd Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>