force-app/main/default/objects/MSL_Consumption__c/fields/X3rd_Month__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Month__c</fullName>
    <label>3rd Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>