force-app/main/default/objects/MSL_Consumption__c/fields/X5th_Month__c.field-meta.xml
<CustomField>
    <fullName>X5th_Month__c</fullName>
    <label>5th Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>