force-app/main/default/objects/MSL_Consumption__c/fields/X6th_Month__c.field-meta.xml
<CustomField>
    <fullName>X6th_Month__c</fullName>
    <label>6th Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>